--- a/style.css
+++ b/style.css
@@ -37,3 +37,48 @@ color:black;}
 	opacity:0.75;
 	border-radius: 30px;
 }
+
+#rect{
+		width:85%;
+	height:25%;
+	background:black;
+	color:white;
+}
+
+
+textarea, input[type=text], select {
+  width: 50%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  background-color:black;
+  color:white;
+}
+
+input[type=submit] {
+  width: 25%;
+  background-color: black;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+#bonjour{
+	font-size:20pt;
+	padding-top:2%;
+}
+
+.test{
+	padding-top:30px;
+	display:flex;
+	
+}
+img{
+width:28%;	
+}
